[package]
name = "ouraring-api-exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
serde_yaml = "0.9.19"
reqwest = { version = "0.11.14", features = ["json"] }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
chrono =  { version = "0.4.26", features = ["serde"] }
thiserror = "1.0.24"
futures = "0.3.17"
influxdb2 = { git = "https://github.com/fredrik-jansson-se/influxdb2", branch = "main" }
influxdb2-derive = { git = "https://github.com/fredrik-jansson-se/influxdb2", branch = "main" }
influxdb2-structmap = { git = "https://github.com/fredrik-jansson-se/influxdb2", branch = "main" }
itertools = "0.10.5"
log = "0.4"
env_logger = "0.11.3"
exitcode = "1.1.2"
